--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,14 @@
   "id": "/black-stacker-game/",
   "icons": [
     {
-      "src": "vite.svg",
+      "src": "icon.svg",
       "type": "image/svg+xml",
-      "sizes": "192x192 512x512"
+      "sizes": "192x192"
+    },
+    {
+      "src": "icon.svg",
+      "type": "image/svg+xml",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
